<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DogBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_screen_title">WELCOME</string>
    <string name="welcome_screen_des">イヌのココロ</string>
    <string name="welcome_screen_des2"><p>~犬語でもっとイイ関係~</p></string>
    <string name="welcome_screen_enter">Enter</string>
    <string name="splash_text">Welcome to my app</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="setting_row1">このアプリについて</string>
    <string name="setting_row2">アイコンの説明</string>
    <string name="setting_row3">既読を全て未読にする</string>
    <string name="setting_row4">お気に入りの全消去</string>
    <string name="name_dev">C Daydream</string>
    <string name="email_dev">inunokimochi_app@gmail.com</string>
    <string name="wc_row1_old">イントロ / キャラ紹介 / ⽝犬の⼗十戒</string>
    <string name="wc_row0">このアプリについて</string>
    <string name="wc_row1">イントロ</string>
    <string name="wc_row2">キャラクター紹介</string>
    <string name="wc_row3">犬の十戒 </string>

    <!-- Exel file detail -->
    <string name="detail">詳細</string>
    <string name="number">番号</string>
    <string name="title">表題</string>
    <string name="illustation">イラストA</string>
    <string name="comment">コメントA</string>
    <string name="confirm_delete_favorite">お気に入りをすべて消去しますか？</string>
    <string name="confirm_delete_favorite_title">""</string>
    <string name="confirm_delete_dog_read">既読を全て未読にしますか？</string>
    <string name="confirm_delete_dog_read_title">""</string>
    <string name="info_text">※黒板の中にチョークで描かれた隠れちょもが「5匹」いるぞ。見つけられるかな</string>
    <string name="des_811">大学生のナズナはカフェでアルバイトをしています。ある日、お姉ちゃんのミズナがお店にやってきました。どうやら飼っているペットについて相談があるようです。</string>
    <string name="des_821">ミズナ「子犬の頃はカワイイ、カワイイでいいけど、ナズナはしつけとかどうしてる？」ナズナ「どーしたの？お姉ちゃん。あの”ちくわ”お手くらいはできるようになった？」</string>
    <string name="des_822">ミズナ「それが全然。最近、しつけの本を読んでるんだけど、もし私が逆の立場だったら複雑だな～と思って」ナズナ「えー！犬の立場になって考えたの？」</string>
    <string name="des_831">ミズナ「うん、まぁそこまでじゃないんだけど、ペットも家族じゃない？もし、自分の子供だったら言葉で意志がわかったり、赤ちゃんならどうしたの？ってあの手この手であやすけど、ペットにはどうして しつけ だけなんだろう？」</string>
    <string name="des_832">ナズナ「う～ん、たしかにそうだね～」ミズナ「犬がもっと何を考えてるかわかればいいのに…ナズナのトコはどうしてるの？”ちょも”あいかわらず元気？」</string>
    <string name="des_833">ナズナ「え？　うん！元気だよ！　ウチは…その…普通にしてるから問題ない…かな～」</string>
    <string name="des_841">ナズナ「はぁ～　犬の立場かぁ～。あ、そうだ！そもそも普通の犬同士ってどうやってコミュニケーションとってるんだろう…」ちょも「どうしたのだナズナ、ちょもが普通じゃないような目で見るでないぞ！」</string>
    <string name="des_842">ナズナ「だって普通、犬は人間の言葉しゃべらないじゃない…」</string>
    <string name="des_843">ちょも「ふむぅ～、それは謎だがしかたないではないかナズナ。でも犬には犬なりの犬語があるぞ！」ナズナ「え？犬語？？」</string>
    <string name="des_844">ちょも「そうだぞ、犬は犬同士、犬語でコミュニケーションをとっているのである！」ナズナ「ねぇ、ちょも それちょっと教えて！」</string>
    <string name="des_851">ちょも「わかったぞナズナ！ちょもが犬語を教えてあげるぞ！」ナズナ「やったー！覚えてお姉ちゃんに教えてあげよ～」</string>
    <string name="des_852">ちょも「任せろだぞ！」</string>
    <string name="index_row26_free">エンド／お知らせ</string>
    <string name="triangle">▼</string>
    <string name="text_share_default_p1">犬に関する疑問</string>
    <string name="text_share_default_p2">をイラスト付で解説。
可愛くてタメになる犬語辞典アプリ「イヌのココロ」より。</string>

</resources>