<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_setting"
    android:padding="0dp" >

    <include
        android:id="@+id/header"
        layout="@layout/navigationbar" >
    </include>

    <LinearLayout
        android:id="@+id/setting_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/white_contener"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="2dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                style="@style/setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/setting_row1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparant"
                android:src="@drawable/ic_favourite" />
        </RelativeLayout>

        <View style="@style/setting_list_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                style="@style/setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/setting_row2" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparant"
                android:src="@drawable/ic_favourite" />
        </RelativeLayout>

        <View style="@style/setting_list_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                style="@style/setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/setting_row3" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparant"
                android:src="@drawable/ic_favourite" />
        </RelativeLayout>

        <View style="@style/setting_list_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                style="@style/setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/setting_row4" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparant"
                android:src="@drawable/ic_favourite" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparant"
            android:src="@drawable/logo_in_setting" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgAvatar"
            android:background="@drawable/bg_dev_info"
            android:padding="12dp" >

            <TextView
                android:id="@+id/tvNameDev"
                style="@style/setting_text_dev_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:text="@string/name_dev" />

            <TextView
                android:id="@+id/tvEmailDev"
                style="@style/setting_text_dev_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNameDev"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:ellipsize="end"
                android:text="@string/email_dev" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/footer" />
    </RelativeLayout>

</RelativeLayout>